Added devise and started bootstraping it's views

--- a/app/views/home/lookup.erb
+++ b/app/views/home/lookup.erb
@@ -6,3 +6,15 @@
 <%end%>
 
 <%= @symbol %>
+
+<% if @symbol %>
+    <% for table in @coins %>
+        <% if table['symbol'] == @symbol %>
+            <%= table['name'] %>: $<%= table["price_usd"] %><br>
+            Rank: <%= table['rank'] %>
+            
+        <% end %>
+    <% end %>
+<% else %>
+    <p>You forgot to type the currency symbol!</p>
+<%end%>
