--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,14 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<br><br>
+<div class="card">
+  <div class="card-header">
+    Sign up
+  </div>
+
+  <div class="card-body">
+    <div class="form-group">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -25,5 +32,15 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+  </div>
 
-<%= render "devise/shared/links" %>
+  
+</div>
+
+
+<div class="card-footer text-muted">
+    <%= render "devise/shared/links" %>
+</div>
+
+</div>
+
