--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -25,6 +25,14 @@
             <%= link_to 'Logout', destroy_user_session_path , method: :delete, class: "dropdown-item"%>
           </div>
         </li>
+
+        <li class="nav-item">
+          <%= link_to 'My cryptos', cryptos_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Add new crypto', new_crypto_path, class: "nav-link" %>
+        </li>
+
       <% else %>
         <li class="nav-item">
           <%= link_to 'Log in', new_user_session_path, class: "nav-link" %>
@@ -42,6 +50,8 @@
       <li class="nav-item">
         <%= link_to 'Look up', home_lookup_path, class: "nav-link" %>
       </li>
+
+      
       
     </ul>
 
