--- a/app/views/cryptos/index.html.erb
+++ b/app/views/cryptos/index.html.erb
@@ -1,14 +1,20 @@
 
-
-<h1>Cryptos</h1>
-
-<table class="table">
+<br><br>
+<h1>My coins</h1>
+<br>
+<table class="table table-bordered">
   <thead>
-    <tr class="table">
+    <tr>
       <th scope="col">Symbol</th>
-      <th scope="col">Cost per</th>
-      <th scope="col">Amount owned</th>
-      <th colspan="3" scope="col"></th>
+      <th scope="col">Current price</th>
+      <th scope="col">1 hour change</th>
+      <th scope="col">24 hour change</th>
+      <th scope="col">7 days change</th>
+      <th scope="col">Current total value</th>
+      <th scope="col">Total paid</th>
+      <th scope="col">Profit/Loss</th>
+      <th scope="col">Paid per unity</th>
+      <th scope="col">Amount purchased</th>
     </tr>
   </thead>
 
@@ -16,18 +22,28 @@
     <% @cryptos.each do |crypto| %>
       <% if crypto.user.id == @user.id%>
         <tr scope="row">
-          <td><%= crypto.symbol %></td>
-          <td><%= crypto.cost_per %></td>
+          <td><%= link_to crypto.symbol, crypto %></td>
+          <% @coins.each do |table| %>
+            <% if  crypto.symbol == table['symbol'] %>
+              <td>$<%= table['price_usd'] %></td>
+              <td><%= table['percent_change_1h'] %>%</td>
+              <td><%= table['percent_change_24h'] %>%</td>
+              <td><%= table['percent_change_7d'] %>%</td>
+              <td>$<%= table['price_usd'].to_d*crypto.amount_owned %></td>
+              <td>$<%= crypto.cost_per*crypto.amount_owned %></td>
+              <td>$<%= table['price_usd'].to_d*crypto.amount_owned - crypto.cost_per*crypto.amount_owned %></td>
+              <% @profit_loss += (table['price_usd'].to_d*crypto.amount_owned - crypto.cost_per*crypto.amount_owned)%>
+            <% end %>
+          <% end %>
+          <td>$<%= crypto.cost_per %></td>
           <td><%= crypto.amount_owned %></td>
-          <td><%= link_to 'Show', crypto %></td>
-          <td><%= link_to 'Edit', edit_crypto_path(crypto) %></td>
-          <td><%= link_to 'Destroy', crypto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
       <% end %>
     <% end %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to 'New Crypto', new_crypto_path, class:"fas fa-plus" %>
+  <strong>Profit/Loss:</strong> <%= number_to_currency(@profit_loss) %>
+<br>
+<br>
+<br>
+<%= link_to 'New Crypto', new_crypto_path, class:"btn btn-primary" %>
