--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -58,7 +58,7 @@
       </li>
 
       <li class="nav-item">
-        <%= link_to 'All coins', root_path, class: "nav-link" %>
+        <%= link_to "Top 100's", root_path, class: "nav-link" %>
       </li>
       
       
